--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
